@@ -1,35 +1,38 @@
-package com.example.namo2.domain.schedule;
+package com.example.namo2.domain.schedule.dao.impl;
 
-import com.example.namo2.domain.moim.domain.MoimAndUser;
-import com.example.namo2.domain.moim.domain.MoimSchedule;
-import com.example.namo2.domain.moim.domain.MoimScheduleAndUser;
-import com.example.namo2.domain.moim.ui.dto.MoimScheduleResponse;
-import com.example.namo2.domain.schedule.domain.Schedule;
-import com.example.namo2.domain.schedule.dto.DiaryDto;
-import com.example.namo2.domain.schedule.dto.GetScheduleRes;
-import com.example.namo2.domain.schedule.dto.OnlyDiaryDto;
-import com.example.namo2.domain.schedule.dto.SliceDiaryDto;
-import com.example.namo2.domain.user.domain.User;
-import com.querydsl.core.types.dsl.BooleanExpression;
-import com.querydsl.jpa.impl.JPAQueryFactory;
-import jakarta.persistence.EntityManager;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Slice;
-import org.springframework.data.domain.SliceImpl;
+import static com.example.namo2.domain.category.domain.QCategory.*;
+import static com.example.namo2.domain.category.domain.QPalette.*;
+import static com.example.namo2.domain.moim.domain.QMoimAndUser.*;
+import static com.example.namo2.domain.moim.domain.QMoimSchedule.*;
+import static com.example.namo2.domain.moim.domain.QMoimScheduleAndUser.*;
+import static com.example.namo2.domain.schedule.domain.QImage.*;
+import static com.example.namo2.domain.schedule.domain.QSchedule.*;
+import static com.example.namo2.domain.user.domain.QUser.*;
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-import static com.example.namo2.domain.category.domain.QCategory.category;
-import static com.example.namo2.domain.category.domain.QPalette.palette;
-import static com.example.namo2.domain.moim.domain.QMoimAndUser.moimAndUser;
-import static com.example.namo2.domain.moim.domain.QMoimSchedule.moimSchedule;
-import static com.example.namo2.domain.moim.domain.QMoimScheduleAndUser.moimScheduleAndUser;
-import static com.example.namo2.domain.schedule.domain.QImage.image;
-import static com.example.namo2.domain.schedule.domain.QSchedule.schedule;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Slice;
+import org.springframework.data.domain.SliceImpl;
+
+import com.example.namo2.domain.moim.application.converter.MoimScheduleResponseConverter;
+import com.example.namo2.domain.moim.domain.MoimAndUser;
+import com.example.namo2.domain.moim.domain.MoimSchedule;
+import com.example.namo2.domain.moim.domain.MoimScheduleAndUser;
+import com.example.namo2.domain.moim.ui.dto.MoimScheduleResponse;
+import com.example.namo2.domain.schedule.application.converter.ScheduleResponseConverter;
+import com.example.namo2.domain.schedule.dao.repository.ScheduleRepositoryCustom;
+import com.example.namo2.domain.schedule.domain.Schedule;
+import com.example.namo2.domain.schedule.ui.dto.ScheduleResponse;
+import com.example.namo2.domain.user.domain.User;
+import com.querydsl.core.types.dsl.BooleanExpression;
+import com.querydsl.jpa.impl.JPAQueryFactory;
+
+import jakarta.persistence.EntityManager;
+import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 public class ScheduleRepositoryImpl implements ScheduleRepositoryCustom {
@@ -42,21 +45,20 @@ public class ScheduleRepositoryImpl implements ScheduleRepositoryCustom {
         this.em = em;
     }
 
-
     /**
      * 알람을 한 번에 가지고 오는 편이 성능상 더 좋은 퍼포먼스를 발휘할지도?
      */
     @Override
-    public List<GetScheduleRes> findSchedulesByUserId(User user, LocalDateTime startDate, LocalDateTime endDate) {
-        List<GetScheduleRes> results = findPersonalSchedulesByUserId(user, startDate, endDate);
-        List<GetScheduleRes> moimSchedules = findMoimSchedulesByUserId(user, startDate, endDate);
+    public List<ScheduleResponse.GetScheduleDto> findSchedulesByUserId(User user, LocalDateTime startDate, LocalDateTime endDate) {
+        List<ScheduleResponse.GetScheduleDto> results = findPersonalSchedulesByUserId(user, startDate, endDate);
+        List<ScheduleResponse.GetScheduleDto> moimSchedules = findMoimSchedulesByUserId(user, startDate, endDate);
         if (moimSchedules != null) {
             results.addAll(moimSchedules);
         }
         return results;
     }
 
-    public List<GetScheduleRes> findPersonalSchedulesByUserId(User user, LocalDateTime startDate, LocalDateTime endDate) {
+    public List<ScheduleResponse.GetScheduleDto> findPersonalSchedulesByUserId(User user, LocalDateTime startDate, LocalDateTime endDate) {
         List<Schedule> schedules = queryFactory
                 .select(schedule).distinct()
                 .from(schedule)
@@ -65,7 +67,7 @@ public class ScheduleRepositoryImpl implements ScheduleRepositoryCustom {
                         scheduleDateLoe(endDate),
                         scheduleDateGoe(startDate))
                 .fetch();
-        return schedules.stream().map(schedule -> new GetScheduleRes(schedule))
+        return schedules.stream().map(schedule -> ScheduleResponseConverter.toGetScheduleRes(schedule))
                 .collect(Collectors.toList());
     }
 
@@ -78,7 +80,7 @@ public class ScheduleRepositoryImpl implements ScheduleRepositoryCustom {
     }
 
     @Override
-    public List<GetScheduleRes> findMoimSchedulesByUserId(User user, LocalDateTime startDate, LocalDateTime endDate) {
+    public List<ScheduleResponse.GetScheduleDto> findMoimSchedulesByUserId(User user, LocalDateTime startDate, LocalDateTime endDate) {
         List<MoimScheduleAndUser> moimScheduleAndUsers = queryFactory
                 .select(moimScheduleAndUser).distinct()
                 .from(moimScheduleAndUser)
@@ -91,7 +93,7 @@ public class ScheduleRepositoryImpl implements ScheduleRepositoryCustom {
                 )
                 .fetch();
         return moimScheduleAndUsers.stream()
-                .map(GetScheduleRes::new).collect(Collectors.toList());
+                .map(ScheduleResponseConverter::toGetScheduleRes).collect(Collectors.toList());
     }
 
     private BooleanExpression moimScheduleDateGoe(LocalDateTime startDate) {
@@ -103,7 +105,7 @@ public class ScheduleRepositoryImpl implements ScheduleRepositoryCustom {
     }
 
     @Override
-    public SliceDiaryDto<DiaryDto> findScheduleDiaryByMonthDto(User user, LocalDateTime startDate, LocalDateTime endDate, Pageable pageable) {
+    public ScheduleResponse.SliceDiaryDto findScheduleDiaryByMonthDto(User user, LocalDateTime startDate, LocalDateTime endDate, Pageable pageable) {
         List<Schedule> content = queryFactory
                 .select(schedule)
                 .from(schedule)
@@ -124,22 +126,21 @@ public class ScheduleRepositoryImpl implements ScheduleRepositoryCustom {
             hasNext = true;
         }
         SliceImpl<Schedule> schedules = new SliceImpl<>(content, pageable, hasNext);
-        Slice<DiaryDto> diarySlices = schedules.map(DiaryDto::new);
-        return new SliceDiaryDto(diarySlices);
+        Slice<ScheduleResponse.DiaryDto> diarySlices = schedules.map(ScheduleResponseConverter::toDiaryDto);
+        return ScheduleResponseConverter.toSliceDiaryDto(diarySlices);
     }
 
     @Override
-    public List<OnlyDiaryDto> findAllScheduleDiary(User user) {
+    public List<ScheduleResponse.GetDiaryByUserDto> findAllScheduleDiary(User user) {
         List<Schedule> schedules = queryFactory
-                .select(schedule).distinct()
-                .from(schedule)
-                .leftJoin(schedule.images, image).fetchJoin()
-                .where(schedule.user.eq(user),
-                        schedule.hasDiary.isTrue()
-                )
-                .fetch();
-        return schedules.stream().map(OnlyDiaryDto::new)
-                .collect(Collectors.toList());
+            .select(schedule).distinct()
+            .from(schedule)
+            .leftJoin(schedule.images, image).fetchJoin()
+            .where(schedule.user.eq(user),
+                schedule.hasDiary.isTrue()
+            )
+            .fetch();
+        return schedules.stream().map(ScheduleResponseConverter::toGetDiaryByUserRes).toList();
     }
 
     @Override
@@ -153,6 +154,7 @@ public class ScheduleRepositoryImpl implements ScheduleRepositoryCustom {
                 .fetchOne();
     }
 
+    // TODO: Moim 관련된 스케줄을 가져오는 것이므로, MoimScheduleRepository로 옮기는 것이 좋을 것 같다.
     @Override
     public List<MoimScheduleResponse.MoimScheduleDto> findMonthScheduleInMoim(Long moimId, LocalDateTime startDate, LocalDateTime endDate) {
         // 모임에 속한 유저들 파악
@@ -185,22 +187,22 @@ public class ScheduleRepositoryImpl implements ScheduleRepositoryCustom {
     }
 
     private List<MoimScheduleResponse.MoimScheduleDto> findIndivisualSchedule(Long moimId, LocalDateTime startDate, LocalDateTime endDate, List<User> users) {
-        return em.createQuery("select new com.example.namo2.domain.moim.ui.dto.MoimScheduleResponse.MoimScheduleDto(" +
-                        "s.name, s.period.startDate, s.period.endDate, s.period.dayInterval, u.id, u.name, mu.color)" +
-                        " from Schedule s, MoimAndUser mu" +
-                        " join s.user u " +
-                        " join s.category c" +
-                        " where s.user in (:users) " +
-                        "and s.period.startDate <= :endDate " +
-                        "and s.period.endDate >= :startDate " +
-                        "and c.share = :share " +
-                        "and mu.user = s.user and mu.moim.id = :moimId", MoimScheduleResponse.MoimScheduleDto.class)
-                .setParameter("users", users)
-                .setParameter("moimId", moimId)
-                .setParameter("endDate", endDate)
-                .setParameter("startDate", startDate)
-                .setParameter("share", true)
-                .getResultList();
+
+		return queryFactory
+                .select(moimSchedule).distinct()
+                .from(moimSchedule)
+                .join(moimAndUser.moim, moimSchedule.moim).fetchJoin()
+                .join(moimAndUser.user, user).fetchJoin()
+                .leftJoin(moimSchedule.moimMemo).fetchJoin()
+                .where(moimSchedule.moim.id.eq(moimId)
+                        .and(moimSchedule.period.startDate.loe(endDate))
+                        .and(moimSchedule.period.endDate.goe(startDate))
+                        .and(moimAndUser.user.in(users))
+                )
+                .fetch()
+                .stream()
+                .map(MoimScheduleResponseConverter::toMoimScheduleDto)
+                .toList();
     }
 
     private Map<MoimSchedule, List<MoimScheduleResponse.MoimScheduleUserDto>> findMoimScheduleAndScheduleUserMap(LocalDateTime startDate, LocalDateTime endDate, List<User> users, Map<Long, MoimScheduleResponse.MoimScheduleUserDto> moimAndUserDtoMap) {
